# heidelbergh

./: .gitignore  README.md  main.py  pyproject.toml
appway_backend/: config.py  epdf_generator.py  inference.py  pdf_report.py  processor.py  s3_utils.py  sns_utils.py  sqs_utils.py  worker.py
appway_backend/report/: __init__.py  generator.py  preview.py  sample_data.py  templates.py
appway_backend/reporting/: __init__.py  audit.py  bundle.py  core.py  email.py  manual_report.py  pdf.py  state.py  weekly_report.py
docs/: appway-windows-ec2.md  appway.md  backend.md  dicom-export-structure.md  heidelberg-remote-session.md  heyex-daily.md  heyex2-dongle.md  heyex2-testing.md  heyex2-ubuntu-dongle.md  heyex2-windows-dongle.md  iam-ec2apwaybackendrole-policy.json  iam-feedback-deploy-policy.json  iam-weekly-report-policy.json  klaus-procmon-runbook.md  next-steps.md  pdf-layout.md  reporting.md  workflow.md
feedback-site/: README.md  deploy.sh
feedback-site/infra/: template.yaml
feedback-site/lambda/: submit_feedback.py
feedback-site/public/: app.js  config.js  index.html  style.css
scripts/: README.md  appway-prune-outputs.sh  appway-rdp.sh  build_test_dcm.sh  cleanup_test_jobs.sh  inject_job.sh  job_timeline.py  probe_iam_permissions.py  rdp-heyex.sh  render-sequence-diagram.sh  run-weekly-report.sh  ssm_run.py
scripts/appway-windows/: healthcheck.ps1  heyex_healthcheck.ps1  heyex_prep_bt_session.ps1  (+3 more)
systemd/: appway-prune-outputs.service  appway-prune-outputs.timer  appway-weekly-report.service  appway-weekly-report.timer  appway-worker.service
