[project]
name = "appway-backend"
version = "0.1.0"
description = "AppWay backend worker — polls appway-jobs, processes payloads, publishes to appway-results"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "pydicom>=2.4",
    "Pillow>=10.0",
    "numpy>=1.26",
    "pylibjpeg>=2.0",
    "pylibjpeg-libjpeg>=2.1",
    "reportlab>=4.0",
    "ultralytics>=8.1.42",
    "torch>=2.2.2",
    "pymupdf>=1.27.2.3",
]

[project.scripts]
appway-worker = "appway_backend.worker:main"
